--- a/style.css
+++ b/style.css
@@ -1,3 +1,5 @@
+/*limite largeur écran : 1100px => placement bouleversé en écrans plus petits*/
+
 @import url('https://fonts.googleapis.com/css2?family=Gemunu+Libre:wght@200&display=swap');
 
 * {
@@ -22,26 +24,29 @@ body {
 }
 
 #superconteneur {
-    border-radius   : 20px;
+    border-radius: 20px;
     margin: 0 auto;
-    height: 500px;
-    width: 600px;
-    /*background-color: RGBA(255,255,255,0.5);*/
-    border: solid 1px red;/**/
-
+    height: 50%;
+    width: 60%;
+    /*border: solid 1px red;*/
 }
 
 #conteneur {
-    flex-wrap: wrap;
+    /*flex-wrap: wrap;*/
+    flex-flow: row wrap;
     justify-content: center;
     margin: 0 auto;
     display: flex;
+    /*border: solid 1px aqua;*/
 }
 
 input {
     width: 150px;
     height: 100px;
     border-radius: 25px;
+    margin: 0.2rem;
+    border: none;
+    /*border: solid 1px pink;*/
 }
 input:hover{
     background-color: RGBA(255,255,255,0.5);
@@ -49,33 +54,34 @@ input:hover{
 }
 
 #output {
-    margin: 50px auto 50px;
-    width: 400px;
-    height: 50px;
+    margin: 2rem auto 2rem;
+    padding: 1.5rem;
+    width: 50%;
+    /*height: 50px;*/
     background: RGBA(255,255,255,0.5);
     text-align: center;
     /*margin-top:  50px;*/
-    font-size: 40px;
+    font-size: 2.5rem;
     border-radius: 25px;
 }
 
-input[value="AC"]{ font-size: 50px;}
-input[value="CE"]{ font-size: 50px;}
-input[value="%"]{ font-size: 50px;}
-input[value="/"]{ font-size: 50px;}
-input[value="7"]{ font-size: 50px;}
-input[value="8"]{ font-size: 50px;}
-input[value="9"]{ font-size: 50px;}
-input[value="*"]{ font-size: 50px;}
-input[value="4"]{ font-size: 50px;}
-input[value="5"]{ font-size: 50px;}
-input[value="6"]{ font-size: 50px;}
-input[value="-"]{ font-size: 50px;}
-input[value="1"]{ font-size: 50px;}
-input[value="2"]{ font-size: 50px;}
-input[value="3"]{ font-size: 50px;}
-input[value="+"]{ font-size: 50px;}
-input[value="0"]{ font-size: 50px;}
-input[value="1"]{ font-size: 50px;}
-input[value="."]{ font-size: 50px;}
-input[value="="]{ font-size: 50px;}
+input[value="AC"]{ font-size: 2.5rem;}
+input[value="CE"]{ font-size: 2.5rem;}
+input[value="%"]{ font-size: 2.5rem;}
+input[value="/"]{ font-size: 2.5rem;}
+input[value="7"]{ font-size: 2.5rem;}
+input[value="8"]{ font-size: 2.5rem;}
+input[value="9"]{ font-size: 2.5rem;}
+input[value="*"]{ font-size: 2.5rem;}
+input[value="4"]{ font-size: 2.5rem;}
+input[value="5"]{ font-size: 2.5rem;}
+input[value="6"]{ font-size: 2.5rem;}
+input[value="-"]{ font-size: 2.5rem;}
+input[value="1"]{ font-size: 2.5rem;}
+input[value="2"]{ font-size: 2.5rem;}
+input[value="3"]{ font-size: 2.5rem;}
+input[value="+"]{ font-size: 2.5rem;}
+input[value="0"]{ font-size: 2.5rem;}
+input[value="1"]{ font-size: 2.5rem;}
+input[value="."]{ font-size: 2.5rem;}
+input[value="="]{ font-size: 2.5rem;}
